--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Program Flow Mod 1 S2</title>
+  <title>Program Flow Module 1 S2</title>
   <style>
     #verse {
       font-style: italic;
